@@ -340,9 +340,10 @@ const int ServerParam::FOUL_CYCLES = 5;
 const double ServerParam::RED_CARD_PROBABILITY = 0.0;
 
 // 16.0
-const int ServerParam::ILLEGAL_DEFENSE_DURATION = 100;
-const int ServerParam::ILLEGAL_DEFENSE_NUMBER = 7;
-const double ServerParam::ILLEGAL_DEFENSE_DIST_X = 25.0;
+const int ServerParam::ILLEGAL_DEFENSE_DURATION = 20;
+const int ServerParam::ILLEGAL_DEFENSE_NUMBER = 0;
+const double ServerParam::ILLEGAL_DEFENSE_DIST_X = 16.5;
+const double ServerParam::ILLEGAL_DEFENSE_WIDTH = 40.32;
 
 /*
   It is necessary to check out whether server is NEW_QSTEP mode
@@ -655,6 +656,7 @@ ServerParam::setDefaultParam()
     M_illegal_defense_duration = ILLEGAL_DEFENSE_DURATION;
     M_illegal_defense_number = ILLEGAL_DEFENSE_NUMBER;
     M_illegal_defense_dist_x = ILLEGAL_DEFENSE_DIST_X;
+    M_illegal_defense_width = ILLEGAL_DEFENSE_WIDTH;
 
     // XXX
     M_random_seed = -1;
@@ -960,6 +962,7 @@ ServerParam::createMap()
         ( "illegal_defense_duration", "", &M_illegal_defense_duration )
         ( "illegal_defense_number", "", &M_illegal_defense_number )
         ( "illegal_defense_dist_x", "", &M_illegal_defense_dist_x )
+        ( "illegal_defense_width", "", &M_illegal_defense_width )
 
         //( "random_seed", "", &M_random_seed )
         ;
