@@ -340,10 +340,10 @@ public:
     // 15.0.0
     static const double RED_CARD_PROBABILITY;
     // 16.0.0
-    static const bool USE_ILLEGAL_DEFENSE;
     static const int ILLEGAL_DEFENSE_DURATION;
     static const int ILLEGAL_DEFENSE_NUMBER;
     static const double ILLEGAL_DEFENSE_DIST_X;
+    static const double ILLEGAL_DEFENSE_WIDTH;
 private:
 
     //////////////////////////////////////////////////////
@@ -632,6 +632,7 @@ private:
     int M_illegal_defense_duration;
     int M_illegal_defense_number;
     double M_illegal_defense_dist_x;
+    double M_illegal_defense_width;
 
     // xxx
     int M_random_seed;
@@ -1093,9 +1094,11 @@ public:
     double redCardProbability() const { return M_red_card_probability; }
 
     // v16
+    bool useIllegalDefense() const { return M_illegal_defense_number != 0; }
     int illegalDefenseDuration() const { return M_illegal_defense_duration; }
     int illegalDefenseNumber() const { return M_illegal_defense_number; }
     double illegalDefenseDistX() const { return M_illegal_defense_dist_x; }
+    double illegalDefenseWidth() const { return M_illegal_defense_width; }
 
     // XXX
     int randomSeed() const { return M_random_seed; }
