@@ -1,3 +1,9 @@
+2020-04-26  Hidehisa Akiyama  <hidehisaakiyama@users.noreply.github.com>
+
+	* rcsc/common/server_param.cpp:
+	* rcsc/common/server_param.h:
+	- illegal defense対応のパラメータとメソッドを追加
+
 2019-08-06  Takuya Fukushima  <takuya.fukushima@kis.osakafu-u.ac.jp>
 
 	* rcsc/player/world_model.cpp:
